Setup files to get the remoting task underway.